// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip attributes basic tooltip component 1`] = `
<span
  data-tooltip-content="Hello World!"
  id="basic-example-attr"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip attributes tooltip component - delayHide 1`] = `
<span
  data-tooltip-content="Hello World!"
  data-tooltip-delay-hide={1000}
  id="basic-example-delay-hide-attr"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip attributes tooltip component - delayShow 1`] = `
<span
  data-tooltip-content="Hello World!"
  data-tooltip-delay-show={1000}
  id="basic-example-delay-show-attr"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip attributes tooltip component - html 1`] = `
<span
  data-tooltip-html="Hello World!"
  data-tooltip-place="top"
  data-tooltip-variant="info"
  id="basic-example-html-attr"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip attributes tooltip component - without anchorId 1`] = `
<span
  data-tooltip-content="Hello World!"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props basic tooltip component 1`] = `
<span
  id="basic-example"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - delayHide 1`] = `
<span
  id="basic-example-delay-hide"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - delayShow 1`] = `
<span
  id="basic-example-delay-show"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - getContent 1`] = `
<span
  id="basic-example-get-content"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - html 1`] = `
<span
  id="basic-example-html"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - position props 1`] = `
<span
  id="position-props"
>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - without anchorId 1`] = `
<span>
  Lorem Ipsum
</span>
`;

exports[`tooltip props tooltip component - without element reference 1`] = `null`;